--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -74,7 +74,7 @@ In this example, `<UserButton />` is mounted inside a header component, which is
             </SignedIn>
             <SignedOut>
               {/* Signed out users get sign in button */}
-              <SignInButton>
+              <SignInButton/>
             </SignedOut>
           </header>
       );
