--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -265,5 +265,5 @@ The `authMiddleware()` method accepts an optional object. The following options 
 | `secretKey?`                       | `string`             | An alternate Clerk secret key.                                                                                                                                                                                                                                                                                                                  |
 | `signInUrl?`                       | `string`             | An alternative sign in URL.                                                                                                                                                                                                                                                                                                                     |
 | `skipJwksCache?`                   | `boolean`            | Disables use of the JWKs cache.                                                                                                                                                                                                                                                                                                                 |
-| `apiKey?` (deprecated)                          | `string`             | An alternate Clerk API key.  (deprecated in favor of `secretKey`)                                                                                                                                                                                                                                                                                                                     |
+| `apiKey?` (deprecated)                          | `string`             | Deprecated in favor of `secretKey`                                                                                                                                                                                                                                                                                                                     |
 | `frontendApi?` (deprecated)                     | `string`             | Deprecated in favor of `publishableKey`.                                                                                                                                                                                                                                                                                                            |
