--- a/docs/references/javascript/types/paginated-response.mdx
+++ b/docs/references/javascript/types/paginated-response.mdx
@@ -12,4 +12,4 @@ An interface that describes the response of a method that returns a paginated li
 | Properties | Type | Description |
 | --- | --- | --- |
 | `data` | `T[]` |  An array that contains the fetched data. |
-| `count` | `number` |  The total count of data that exist remotely. |
+| `total_count` | `number` |  The total count of data that exist remotely. |
