--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -15,7 +15,7 @@ This is a class that represents an organization. It's returned from the [`create
 | `name` | `string` | The name of the related organization. |
 | `slug` | `string \| null` | The organization slug. If supplied, it must be unique for the instance. |
 | `logoUrl` (deprecated) | `string \| null` | Deprecated in favor of `imageUrl`. |
-| `imageUrl` | `string` | Holds the organization logo or default logo. |
+| `imageUrl` | `string` | The URL of the organization's logo. |
 | `hasImage` | `boolean` | A getter boolean to check if the organization has an uploaded image. Returns `false` if Clerk is displaying an avatar for the organization. |
 | `membersCount` | `number` | The number of members the associated organization contains. |
 | `pendingInvitationsCount` | `number` | The number of pending invitations to users to join the organization. |
